fix image size overflow in rank.blade.php

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -206,6 +206,7 @@ ins.adsbygoogle[data-ad-status="unfilled"] {
     min-height: 270px;
 }
 .rank-card img {
+    width: 100%;
     object-fit: contain;
 }
 
